fix text align

--- a/src/components/sort/sort.module.scss
+++ b/src/components/sort/sort.module.scss
@@ -20,6 +20,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 
   &:first-child {
     border-top-left-radius: 6px;
